Removed gaps between menu items with the html comment trick. Updated styles for li and anchors so the anchor is as large as the menu button so the whole thing is clickable. Fixed all the bad closing anchor tags.

--- a/css/_header.scss
+++ b/css/_header.scss
@@ -27,7 +27,7 @@ header {
 	}
 	li {
 		display: inline-block;
-		padding: 18px 15px 19px 15px;
+        vertical-align: top;
 		-webkit-transition: .3s; /* Safari */
     	transition: .3s;
     	a {
@@ -91,6 +91,8 @@ header {
 			color: $primary-text-color-dark;
 			-webkit-transition: .5s; /* Safari */
 	    	transition: .5s;
+            display: inline-block;
+            padding: 18px 15px 19px 15px;
 		}
 		&:hover {
 			background-color: $primary-highlight-color;
